[package]
name    = "mkv-element"
version = "0.0.0"
edition = "2024"

authors     = ["b01o <b01o@proton.me>"]
repository  = "https://github.com/b01o/mkv-element"
license     = "MIT OR Apache-2.0"
description = "[WIP]"

[dependencies]
thiserror = "2"
hexf = "0.2.1"
paste = "1"
log = "0.4"

tokio = { version = "1.47", default-features = false, features = [
    "io-util",
], optional = true }

[features]
tokio = ["dep:tokio"]

[dev-dependencies]
roxmltree = "0.20.0"
tokio     = { version = "1.47", features = ["full"] }

[build-dependencies]
roxmltree = "0.20.0"
hexf      = "0.2.1"
